welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:19: error: too many arguments for method getCouleurBrosse: ()java.awt.Color
    getCouleurBrosse( tab((j+decalage)%getMondeHauteur()) );
                    ^